Global replace of hydradam with phydo
* Replaces "HydraDAM" with "Phydo".
* Replaces "Hydradam" with "Phydo".
* Replaces "hydradam" with "phydo".
* Renames directory "lib/hydra" to "lib/phydo".

Closes HDM-894.

--- a/config/locales/hydradam.en.yml
+++ b/config/locales/hydradam.en.yml
@@ -1,10 +1,10 @@
 en:
   curation_concerns:
-    product_name: "HydraDAM2"
+    product_name: "Phydo2"
     search:
       form:
         q:
-          label: "Search HydraDAM"
+          label: "Search Phydo"
     storage_proxy:
       actions:
         stage:
