Sets the app name
Fixes home page spec that justs makes sure it loads.

--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -1,6 +1,6 @@
 en:
   hyrax:
-    product_name:           "Hyrax"
+    product_name:           "Phydo"
     product_twitter_handle: "@HydraSphere"
     institution_name:       "Institution"
     institution_name_full:  "The Institution Name"
